fix(backend/wishlist): fix wishlist inconsistency from front to api feat(backend/notification): add notification system, websocket wip fix(backend/release): fix external api entity to dto conversion fix(frontend/wishlist): fix wishlist incorrect field mapping
	modified:   backend/Vinyl/pom.xml
	modified:   backend/Vinyl/src/main/java/com/vinyl/VinylExchange/checkout/CheckOutService.java
	modified:   backend/Vinyl/src/main/java/com/vinyl/VinylExchange/external/dto/Release.java
	modified:   backend/Vinyl/src/main/java/com/vinyl/VinylExchange/external/dto/ReleaseDTO.java
	modified:   backend/Vinyl/src/main/java/com/vinyl/VinylExchange/external/musicbrainz/MusicBrainzClient.java
	modified:   backend/Vinyl/src/main/java/com/vinyl/VinylExchange/external/musicbrainz/MusicBrainzController.java
	modified:   backend/Vinyl/src/main/java/com/vinyl/VinylExchange/external/musicbrainz/MusicBrainzService.java
	modified:   backend/Vinyl/src/main/java/com/vinyl/VinylExchange/listing/Listing.java
	deleted:    backend/Vinyl/src/main/java/com/vinyl/VinylExchange/listing/Vinyl.java
	deleted:    backend/Vinyl/src/main/java/com/vinyl/VinylExchange/listing/VinylRepository.java
	deleted:    backend/Vinyl/src/main/java/com/vinyl/VinylExchange/listing/VinylService.java
	deleted:    backend/Vinyl/src/main/java/com/vinyl/VinylExchange/listing/label/Label.java
	deleted:    backend/Vinyl/src/main/java/com/vinyl/VinylExchange/listing/label/LabelInfo.java
	deleted:    backend/Vinyl/src/main/java/com/vinyl/VinylExchange/listing/label/LabelRepository.java
	deleted:    backend/Vinyl/src/main/java/com/vinyl/VinylExchange/listing/label/LabelService.java
	new file:   backend/Vinyl/src/main/java/com/vinyl/VinylExchange/notification/Notification.java
	new file:   backend/Vinyl/src/main/java/com/vinyl/VinylExchange/notification/NotificationCommand.java
	new file:   backend/Vinyl/src/main/java/com/vinyl/VinylExchange/notification/NotificationController.java
	new file:   backend/Vinyl/src/main/java/com/vinyl/V